Fixed z-index of Glow CSS #140

--- a/src/styles/views/Game.scss
+++ b/src/styles/views/Game.scss
@@ -153,7 +153,7 @@
 
 .glow {
   animation: glow 1.5s infinite alternate;
-  z-index: 9999999;
+  z-index: 3;
 }
 
 @keyframes glow {
